# kasandra

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  dev_ms.md  pyproject.toml
.agents/skills/: README.md
.agents/skills/docs-sync/: SKILL.md
.agents/skills/research-update/: SKILL.md
.agents/skills/schema-change/: SKILL.md
.agents/skills/source-integration/: SKILL.md
.agents/skills/vertical-slice/: SKILL.md
.claude/: settings.json  settings.local.example.json  settings.local.json
.claude/commands/: concept.md  docs-sync.md  repo-check.md  research-update.md  schema-change.md  slice.md  source.md  task-finish.md  task-start.md
.claude/project-memory/: MEMORY.md  architecture.md
.claude/skills/concept-work/: SKILL.md
.github/workflows/: ci.yml
dev_ms_data/: snapshot_summary_2026-04-20.md
dev_ms_data/scripts/: extract_crbr.py  extract_krs.py  fetch_crbr.py  fetch_crbr_playwright.py  fetch_krs.py  import_to_db.py  import_today.py  run_diff.py  seed_synthetic.py
docs/: 01-overview.md  02-data-sources.md  02-sources-and-alerts.md  03-roadmap-and-gates.md  03-signals-and-alerts.md  04-market-and-positioning.md  04-tech-stack.md  05-mvp.md  05-sample-alerts.md  06-risks-and-open-questions.md  07-tech-stack.md  roadmap.mmd
examples/: sample-alerts.md  sample-company-cases.md
research/: source-notes.md
scripts/: bootstrap.ps1  check-changed.ps1  repo-check.ps1
sql/schema/: 001_init.sql
src/kasandra/: __init__.py  __main__.py
tests/integration/: test_cli.py
tests/unit/: test_package.py
(+122 files in other folders)
